Fix dataset path for jena_climate

--- a/jena_climate/jena_climate.ipynb
+++ b/jena_climate/jena_climate.ipynb
@@ -301,7 +301,7 @@
    ],
    "source": [
     "# Replace this with the actual path to Jena Climate Dataset\n",
-    "dataset_path = '/Users/martinmurzenkov/Kozminski University/4 Semester/Advanced Python/data/jena_climate_2009_2016.csv'\n",
+    "dataset_path = '/Users/martinmurzenkov/Programming/portfolio/data/jena_climate_2009_2016.csv'\n",
     "df = pd.read_csv(dataset_path)\n",
     "\n",
     "# Initially Data Time contains string values\n",
